<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_white"
    android:layout_height="match_parent"
    tools:context=".Home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/graphview"
        app:cardBackgroundColor="#724BB8"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:cardElevation="10dp"

        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/c7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="25sp"

            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:text="@string/COVID_19_Tracker"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#724BB8"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp"></androidx.cardview.widget.CardView>



            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                    <ImageView
                        android:layout_width="80dp"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="20dp"
                        android:src="@drawable/bacteria"
                        />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/covid"
                            android:layout_marginLeft="30dp"
                            android:text="Total Cases"
                            android:textColor="#673AB7"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="20dp"


                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        >
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/near"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"


                            android:layout_marginLeft="30dp"
                            android:text="@string/Nearbyme"
                            android:id="@+id/near"
                            android:textColor="#673AB7"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/symptoms"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:layout_marginLeft="30dp"
                            android:text="@string/Symptoms"
                            android:id="@+id/sym"
                            android:textColor="#673AB7"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/pro"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/proc"
                            android:layout_gravity="center"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/Prevention"
                            android:textColor="#673AB7"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/help"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="30dp"
                            android:id="@+id/help"
                            android:layout_marginTop="10dp"
                            android:text="@string/Help"
                            android:textColor="#673AB7"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_marginTop="10dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="20dp"
                            android:src="@drawable/house"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:id="@+id/news"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/News"
                            android:textColor="#673AB7"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>
            </ScrollView>
        </LinearLayout>
</RelativeLayout>